<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/titleLable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/black_ops_one"
        android:text="SignUp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="171dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="34dp"
        android:fontFamily="@font/black_ops_one"
        android:text="@string/body_track_app"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleLable"
        android:fontFamily="@font/black_ops_one"
        android:text="@string/create_a_new_account"
        android:textAlignment="center"
        android:textColor="#EDEDED" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullnameTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/phonenumberTil"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/fullnameEl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>
<!-- Phone Number -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phonenumberTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/emailTil"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/phonenumberEl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>
<!--    Email   -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/passwordTil"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/emailEl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>




    <!--Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/passwordEl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--login-->
    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordTil"
        android:layout_marginTop="10dp"
        android:text="@string/signup" />


</RelativeLayout>